# design-patters

./: README.md
Decorator/: CMakeLists.txt  compress_stream.h  encrypt_stream.h
Factory/: client.cpp
Observer/: main.cpp
StateMachine/: main.cpp  order_event.h  order_status.h  state_machine.h
StateMachine/states/: pending_pay.h
factory/: button.h  main.cpp  winButton.h  winFactory.h
other/: call_once  call_once.cpp  make_share  share_ptr  share_ptr.cpp  weak_ptr
patters/Decorator/: file_stream.h  main.cpp  stream.h
patters/Factory/: client.h  factory.h
patters/StateMachine/: CMakeLists.txt  state_strategy.h
patters/StateMachine/states/: completed.h  delivering.h  paid.h
patters/other/: make_share.cpp  unique_ptr  unique_ptr.cpp  weak_ptr.cpp  weak_ptr_practice.cpp
patters/singleon/: test_logger
singleon/: logger.hpp  singleton.hpp  test_logger.cpp
